# mlb-analytics

./: .gitignore  pyproject.toml
backend/: constants.py  data_collection.py  main.py  models.py  scripts.py
backend/mlbmodels/: re24.py
