[project]
name = "baseballanalytics"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "fastapi>=0.115.11",
    "hishel>=0.1.1",
    "httpx>=0.28.1",
    "pandas>=2.2.3",
    "polars>=1.23.0",
    "ruff>=0.9.7",
    "sqlmodel>=0.0.22",
    "tenacity>=9.0.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.34.0",
]
